feat: swim-lane topology layout with Manhattan routing and per-slice wire format